--- a/packages/core/src/styles/_colors.scss
+++ b/packages/core/src/styles/_colors.scss
@@ -181,6 +181,7 @@
 
     --mining-sdk-button-secondary-text: #ffffffcc;
     --mining-sdk-button-secondary-border: #ffffff33;
+    --mining-sdk-button-secondary-border-visible: rgba(255, 255, 255, 0.65);
     --mining-sdk-button-secondary-border-hover: #f7931a80;
     --mining-sdk-button-secondary-bg: #17130f;
 
